[□と○]を学習しました。

--- a/02_レシピ/01_カウンター/index.html
+++ b/02_レシピ/01_カウンター/index.html
@@ -9,13 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Counter</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div>
-      <h2 id="display">0</h2>
-    </div>
-    <button id="plus-button">+1</button>
+    <div id="figure" class="transition square"></div>
 
-    <script src="main.js"></script>
+     
+
+    <button id="circle-button">丸くなるのです</button>
+    <button id="square-button">尖るのです</button>
+
+    <script src="./main.js"></script>
   </body>
 </html>
